--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Here is a heading</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>test title</title>
+  </head>
+
+  <body>
+    <h1>Here is a heading</h1>
+    And here is some random text
+  </body> 
+  
+</html>
+  
